2008-04-24  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23032.
	* include/avr/iomxx4.h: Add missing PORTxn bit definitions.
	* NEWS: Add to bug list.

2008-04-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm2b.h (FUSE_CKLDIV8): Rename to FUSE_CKDIV8.
	* include/avr/io90pwm3b.h: Ditto.
	* include/avr/iotn167.h (BIN): Fix the value of BIN to 7 for the ADCSRB
	register.
	* include/avr/iom88p.h: Add ADCW definition and guard ADC for assembler.

2008-04-10  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/math.h: Change functions from 'extern inline' to 'static inline'.
	This works around a linker problem with including this header and using
	-std=[gnu99,c99] (it would give 'multiple definition' errors).

2008-04-09  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/eeprom.h: Restore 'extern "C"' envelope. It was lost
	in 2005, with Avr-libc-1.2.6.

2008-04-08  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22877:
	* include/avr/iox128a1.h: Fix fuse information.
	* include/avr/iox64a1.h: Ditto.
	* NEWS: Add to fixed bug list.

2008-04-07  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom328p.h: Fix SPM_PAGESIZE.
	* include/avr/iom88p.h: Ditto.
	* include/avr/iom48p.h: Ditto.

2008-04-07  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22870.
	* include/avr/wdt.h: Add support for ATmega164P, ATmega324P, ATmega644P.
	Rearrange condition list to alphabetical order.
	* NEWS: Add to fixed bug list.

2008-04-05  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/runtest.sh: Add support of .eeprom section. Add
	check of simulavr's runtime errors.
	* tests/simulate/regression/20080405-eeprom.c: New file.

2008-04-04  Eric B. Weddington

	Fix for bug #22834.
	* include/iomxx4.h: Add BOD and BODSE bit definitions.
	* NEWS: Add to fixed bug list.

2008-04-04  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix for bug #22828.