@@ -1,3 +1,8 @@
+2008-04-26  Anatoly Sokolov <aesok@post.ru>
+
+	* AvrCommon.am: Remove.
+	* AvrCommonLibC.am: Remove.	
+
 2008-04-24  Eric B. Weddington  <eric.weddington@atmel.com>
 
 	Fix for bug #23032.
